--- a/Harisoft.IDP/Properties/launchSettings.json
+++ b/Harisoft.IDP/Properties/launchSettings.json
@@ -2,6 +2,10 @@
   "iisSettings": {
     "windowsAuthentication": true,
     "anonymousAuthentication": true,
+    "iis": {
+      "applicationUrl": "http://localhost/Harisoft.IDP",
+      "sslPort": 0
+    },
     "iisExpress": {
       "applicationUrl": "https://localhost:44373/",
       "sslPort": 44373
